new/prusti/tests/pass/parse/invalid_prusti_attributes.stderr
error: "unexpected Prusti attribute; expected `prusti::requires` or `prusti::ensures`"
 --> $DIR/invalid_prusti_attributes.rs:6:1
  |
6 | #[prusti::requires::something(true)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: "unexpected Prusti attribute; expected `prusti::requires` or `prusti::ensures`"
 --> $DIR/invalid_prusti_attributes.rs:9:11
  |
9 | #[prusti::ensures2(true)]
  |           ^^^^^^^^

error: aborting due to 2 previous errors

